+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.4.3c1?
=============================

*Release date: XX-XX-200X*

Core and builtins
-----------------

- Bug #1281408: Py_BuildValue now works correct even with unsigned longs
  and long longs.

- SF Bug #1350188, "setdlopenflags" leads to crash upon "import"
  It was possible dlerror() returns a NULL pointer, use a default error
  message in this case.

- SF bug #1167751: fix incorrect code being for generator expressions.
  The following code now raises a SyntaxError:  foo(a = i for i in range(10))

- SF Bug #976608: fix SystemError when mtime of an imported file is -1.

- SF Bug #887946: fix segfault when redirecting stdin from a directory.
  Provide a warning when a directory is passed on the command line.

- Fix segfault with invalid coding.

Extension Modules
-----------------

- Bug #1290333: Added a workaround for cjkcodecs' _codecs_cn build
  problem on AIX.

- Bug #869197: os.setgroups rejects long integer arguments

- Bug #1344508, Fix UNIX mmap leaking file descriptors

- Patch #1338314, Bug #1336623: fix tarfile so it can extract
  REGTYPE directories from tarfiles written by old programs.

- Patch #1309009, Fix segfault in pyexpat when the XML document is in latin_1,
  but Python incorrectly assumes it is in UTF-8 format

- Fix parse errors in the readline module when compiling without threads.

Library
-------

- Bug #1365984: urllib now opens "data:" URLs again.

- Patch #1314396: Prevent threading.Thread.join() from blocking if a previous
  call caused an exception to be raised (e.g., calling join() with an illegal
  argument).

- urllib.unquote() now handles Unicode strings correctly.  Formerly, it would
  either ignore the substitution or raise UnicodeDecodeError.

- SF #1313496:  the bisect module now accepts named arguments.

- Bug #729103: pydoc.py: Fix docother() method to accept additional